--- a/appgo/conf/conf.toml
+++ b/appgo/conf/conf.toml
@@ -107,7 +107,7 @@ qqUserInfo="https://graph.qq.com/user/get_user_info"
         dialect = "mysql"
         addr = "127.0.0.1:3306"
         username = "root"
-        password = "root"
+        password = "123456"
         db = "ecology"
         charset = "utf8"
         parseTime = "True"
@@ -119,7 +119,7 @@ qqUserInfo="https://graph.qq.com/user/get_user_info"
         maxIdleConns = 10
         connMaxLifetime = "300s"
     [muses.session.gin]
-        mode = "redis" # memory, redis
+        mode = "myredis" # memory, redis
         name = "mysession"
         size = 10
         network = "tcp"
